# FastAPI-TaskManagement

./: README.md  pyproject.toml
app/: __init__.py  config.py  database.py  dependencies.py
app/core/: task.py
app/cruds/: base.py  task.py
app/enums/: exception.py
app/models/: task.py
app/routers/: __init__.py  default.py  task.py
app/schemas/: __init__.py  task.py
postman/: Task Management API.postman_collection.json  taskmanager-local.postman_environment.json
tests/: test_tasks.py
