[tool.poetry]
name = "fastapi-taskmanagement-dm"
version = "0.1.0"
description = ""
authors = ["stdOWL <osman.ozturk2@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
psycopg = "^3.2.3"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
